amdsmn(4), amdtemp(4): add support for AMD Family 19h Models 10h-1Fh.

Tested on AMD Threadripper 7960X.

PR:		kern/278311
Tested by:	jbo
MFC after:	1 week